--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
   ],
   "markdown.marp.html": "all",
   "markdown.marp.mathTypesetting": "katex",
-  "markdown.marp.breaks": "off"
+  "markdown.marp.breaks": "off",
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#61040F",
+    "titleBar.activeBackground": "#880516",
+    "titleBar.activeForeground": "#FFFBFC"
+  }
 }
